--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,20 @@ environment:
   sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
+  bluesky: ^0.4.0
+  collection: ^1.17.1
   crypto: ^3.0.2
   dart_frog: ^0.3.0
+  dotenv: ^4.1.0
+  isar: ^3.1.0+1
+  json_annotation: ^4.8.0
+  template_expressions: ^3.0.0+5
 
 dev_dependencies:
+  build_runner: ^2.3.3
+  fixnum: ^1.1.0
+  isar_generator: ^3.1.0+1
+  json_serializable: ^6.6.1
   mocktail: ^0.3.0
   test: ^1.19.2
   very_good_analysis: ^4.0.0
