add somewhat proper authentication support

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ SKYBRIDGE_APP_PASSWORD = ""
 # Random secret, generate with `openssl rand -base64 32`.
 SKYBRIDGE_SECRET = ""
 
+# Password used to initially authenticate on the SkyBridge sign-in page.
+# Make sure it's nice, long, and secure.
+SKYBRIDGE_AUTH_PASSWORD = ""
+
 # Should the ID database be wiped on start?
 # Useful for testing/development.
 SKYBRIDGE_WIPE_DB_ON_START = true
