--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   dotenv: ^4.1.0
   isar: ^3.1.0+1
   json_annotation: ^4.8.0
+  path: ^1.8.3
   template_expressions: ^3.0.0+5
 
 dev_dependencies:
