implement account search endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Bluesky email or username you use to login.
 SKYBRIDGE_IDENTIFIER = ""
 
+# Base URL of where SkyBridge will be hosted without the protocol.
+SKYBRIDGE_BASEURL = "your.domain.com"
+
 # Bluesky app password
 # DO NOT USE YOUR MAIN PASSWORD! Generate an app password in the main client.
 SKYBRIDGE_APP_PASSWORD = ""
