--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   isar: ^3.1.0+1
   json_annotation: ^4.8.0
   path: ^1.8.3
+  shelf_cors_headers: ^0.1.5
   template_expressions: ^3.0.0+5
 
 dev_dependencies:
