--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   copy_with_extension: ^5.0.2
   crypto: ^3.0.2
   dart_frog: ^0.3.0
+  dcli_core: ^2.2.0
   dotenv: ^4.1.0
   isar: ^3.1.0+1
   json_annotation: ^4.8.0
@@ -22,8 +23,8 @@ dependencies:
   template_expressions: ^3.0.0+5
 
 dev_dependencies:
-  copy_with_extension_gen: ^5.0.2
   build_runner: ^2.3.3
+  copy_with_extension_gen: ^5.0.2
   fixnum: ^1.1.0
   isar_generator: ^3.1.0+1
   json_serializable: ^6.6.1
