work in progress index page

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ SKYBRIDGE_AUTH_PASSWORD = ""
 # Should the ID database be wiped on start?
 # Useful for testing/development.
 SKYBRIDGE_WIPE_DB_ON_START = true
+
+# Should a nice index page be shown on the root URL?
+SKYBRIDGE_SHOW_INDEX = false
