add the option of disabling the use of a bridge password

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,13 @@ SKYBRIDGE_BASEURL = "your.domain.com"
 # Random secret, generate with `openssl rand -base64 32`.
 SKYBRIDGE_SECRET = ""
 
-# Password used to initially authenticate on the SkyBridge sign-in page.
+# Bridge password used to initially authenticate on the SkyBridge sign-in page.
 # Make sure it's nice, long, and secure.
-SKYBRIDGE_AUTH_PASSWORD = ""
+SKYBRIDGE_AUTH_PASSWORD = "replace-me"
+
+# Should a bridge password be required to authenticate?
+# If false, your SkyBridge will be open to the public.
+SKYBRIDGE_REQUIRE_AUTH_PASSWORD = true
 
 # Should the ID database be wiped on start?
 # Useful for testing/development.
