--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - master
 
+env:
+  DOCKERHUB_USERNAME: videah
+
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -20,7 +23,7 @@ jobs:
         name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
+          username: ${{ DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build and push
@@ -30,5 +33,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            "${{ env.DOCKERHUB_USERNAME }}/skybridge:latest"
-            "${{ env.DOCKERHUB_USERNAME }}/skybridge:${{ github.sha }}"
+            "${{ DOCKERHUB_USERNAME }}/skybridge:latest"
+            "${{ DOCKERHUB_USERNAME }}/skybridge:${{ github.sha }}"
