--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,9 +4,6 @@ on:
     branches:
       - master
 
-env:
-  DOCKERHUB_USERNAME: videah
-
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -23,7 +20,7 @@ jobs:
         name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ DOCKERHUB_USERNAME }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build and push
@@ -33,5 +30,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            "${{ DOCKERHUB_USERNAME }}/skybridge:latest"
-            "${{ DOCKERHUB_USERNAME }}/skybridge:${{ github.sha }}"
+            "${{ vars.DOCKERHUB_USERNAME }}/skybridge:latest"
+            "${{ vars.DOCKERHUB_USERNAME }}/skybridge:${{ github.sha }}"
