--- a/.github/workflows/docker-x86.yml
+++ b/.github/workflows/docker-x86.yml
@@ -27,7 +27,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: |
             "${{ vars.DOCKERHUB_USERNAME }}/skybridge:latest"
