--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   dart_frog: ^0.3.0
   dcli_core: ^2.2.0
   dotenv: ^4.1.0
+  html: ^0.15.3
   isar: ^3.1.0+1
   json_annotation: ^4.8.0
   path: ^1.8.3
