--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   json_annotation: ^4.8.0
   path: ^1.8.3
   shelf_cors_headers: ^0.1.5
+  shelf_rate_limiter: ^1.0.1
   template_expressions: ^3.0.0+5
   yet_another_json_isolate: ^1.0.4
 
