gate backfilling behind an env variable

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ SKYBRIDGE_WIPE_DB_ON_START = true
 
 # Should a nice index page be shown on the root URL?
 SKYBRIDGE_SHOW_INDEX = false
+
+# Allow backfilling/scrolling on timelines? (can be cause issues on instances under heavy load)
+SKYBRIDGE_ALLOW_BACKFILL = true
