--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,8 @@ environment:
   sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
-  atproto: ^0.4.0
-  bluesky: ^0.6.0
+  atproto: ^0.5.1
+  bluesky: ^0.7.1
   bluesky_text: ^0.2.1
   collection: ^1.17.1
   copy_with_extension: ^5.0.2
@@ -19,6 +19,7 @@ dependencies:
   html: ^0.15.3
   isar: ^3.1.0+1
   json_annotation: ^4.8.0
+  orm: ^3.4.4
   path: ^1.8.3
   shelf_cors_headers: ^0.1.5
   shelf_rate_limiter: ^1.0.1
@@ -34,3 +35,6 @@ dev_dependencies:
   mocktail: ^0.3.0
   test: ^1.19.2
   very_good_analysis: ^5.0.0+1
+
+dependency_overrides:
+  http: ^0.13.6
