fix yaml issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,17 +8,17 @@ services:
       - skybridge:/app/database
     environment:
       # Base URL of where SkyBridge will be hosted without the protocol.
-      - SKYBRIDGE_BASEURL="your.domain.com"
+      - SKYBRIDGE_BASEURL=your.domain.com
       # Random secret, generate with `openssl rand -base64 32`.
-      - SKYBRIDGE_SECRET=""
+      - SKYBRIDGE_SECRET
       # Password used to make a SkyBridge instance private.
-      - SKYBRIDGE_AUTH_PASSWORD=""
+      - SKYBRIDGE_AUTH_PASSWORD
       # Should a bridge password be required to authenticate?
       - SKYBRIDGE_REQUIRE_AUTH_PASSWORD=true
       # Should a nice index page be shown on the root URL?
       - SKYBRIDGE_SHOW_INDEX=false
       # Allow backfilling/scrolling on timelines? (can cause issues on instances under heavy load)
-      - SKYBRIDGE_ALLOW_BACKFILL = true
+      - SKYBRIDGE_ALLOW_BACKFILL=true
 
 volumes:
   skybridge:
