--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   html: ^0.15.3
   http: ^0.13.6
   image_compression: ^1.0.4
+  intl: ^0.19.0
   json_annotation: ^4.8.0
   orm: ^3.4.4
   path: ^1.8.3
